# jenkinsflow

./: .copier-answers.yml  .coveragerc  .gitignore  .pylintrc  .travis.yml  INSTALL.md  LICENSE.TXT  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  api_base.py  checking_state.py  flow.py  flow_graph.json  flow_vis.html  hyperspeed.py  jenkins_api.py  jenkins_cli_protocol.py  jenkinsapi_wrapper.py  jobcontrol.py  jobload.py  kill_type.py  mocked.py  noxfile.py  propagation_types.py  py_version_check.py  pyproject.toml  pytest.ini  readthedocs-requirements.txt  requirements.txt  rest_api_wrapper.py  script_api.py  server.py  set_build_description.py  set_build_result.py  setup.cfg  setup.py  (+7 more)
cli/: __init__.py  cli.py  set_build_description.py  set_build_result.py  utils.py
demo/: basic.py  buildsome.py  calculated_flow.py  demo_security.py  demo_setup.py  errors.py  get_jenkins_api.py  hide_password.py  hide_password_jobs.py  jenkinsflow  multi_level_errors1.py  multi_level_errors1_jobs.py  multi_level_errors2.py  multi_level_errors2_jobs.py  nested.py  nested_jobs.py  prefix.py  prefix_jobs.py  single_level.py  single_level_errors.py  single_level_jobs.py  single_level_with_errors.py  unbuffered.py
demo/jobs/: basic_jobs.py  calculated_flow_jobs.py  errors_jobs.py  hide_password_jobs.py  prefix_jobs.py
demo/lib/: demo_security.py  get_jenkins_api.py
doc/source/: Makefile  conf.py  index.rst  jenkinsflow.flow.rst  jenkinsflow.jenkins_api.rst  jenkinsflow.jenkinsapi_wrapper.rst  jenkinsflow.rst  jenkinsflow.script_api.rst  jenkinsflow.set_build_description.rst  jenkinsflow.set_build_result.rst  jenkinsflow.specialized_api.rst  jenkinsflow.unbuffered.rst  jenkinsflow.utils.set_build_description.rst  jenkinsflow.utils.set_build_result.rst  set_build_description.py.rst  set_build_result.py.rst
docs/: requirements.txt
docs/source/: Makefile  conf.py  index.rst  jenkinsflow.jenkins_api.rst  jenkinsflow.jobload.rst  jenkinsflow.script_api.rst
js/: .graph.js.swp  graph.js
src/: __init__.py  api_base.py  checking_state.py  flow.py  flow_exceptions.py  jenkins_api.py  jobload.py  logging_process.py  ordered_enum.py  propagation_types.py  rest_api_wrapper.py  script_api.py  speed.py
src/cli/: cli.py  set_build_description.py
src/utils/: __init__.py  set_build_description.py  utils.py
src/visual/: README.md  flow_vis.html  server.py
stylesheets/: flow.css
test/: .coverage_jenkinsapi_rc  .coverage_mocked_rc  .coverage_real_rc  .coverage_script_api_rc  .coveragerc  __init__.py  abort_job.py  abort_retry_test.py  abort_test.py  api_class_repr_test.py  auth_error_test.py  boolean_and_int_params_test.py  boolean_int_params.py  boolean_int_params_test.py  cause_test.py  cfg.py  conftest.py  coverage_rc.tenjin  demos_test.py  direct_url_test.py  early_set_result_test.py  empty_flow.py  empty_flow_test.py  enable_disable_test.py  env_test.py  flow_scope_test.py  flow_setup_exception_test.py  github_folder_test.py  hide_password_fail.py  hide_password_fail_test.py  hyperspeed_test.py  invalid_job_names_test.py  invoke_unchecked.py  invoke_unchecked_test.py  jenkins_api_test.py  job.xml  job_load_test.py  json_test.py  json_test_compact.json  json_test_pretty.json  (+58 more)
test/framework/: __init__.py  abort_job.py  abstract_api.py  api_select.py  api_wrapper.py  base_test_api.py  clean_jobs_state.py  config.py  coverage_rc  hyperspeed.py  hyperspeed.ttt.py  (+17 more)
utils/: __init__.py  set_build_description.py  set_build_result.py  utils.py
visual/: flow_vis.html  server.py
(+19 files in other folders)
