[metadata]
name = jenkinsflow
url = https://github.com/lhupfeldt/jenkinsflow.git

author = Lars Hupfeldt Nielsen
author_email = lhn@hupfeldtit.dk

description = Python API with high level build flow constructs (parallel/serial) for Jenkins.
long_description = file: README.rst
long_description_content_type = text/x-rst

license = BSD

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
include_package_data = True
install_requires =
    # Add your dependencies here
    requests>=2.20,<=3.0
    atomicfile>=1.0,<=2.0
    click>=7.0
    tenjin>=1.1.1

    # Required by the script API:
    # You need to install python(3)-devel to be be able to install psutil, see INSTALL.md
    psutil>=5.6.6
    setproctitle>=1.1.10

    # Required by the job dependency graph visualisation
    bottle>=0.12.1

python_requires = >= 3.9

packages =
    jenkinsflow
    jenkinsflow.utils
    jenkinsflow.cli

package_dir =
    jenkinsflow = src
    jenkinsflow.utils = src/utils
    jenkinsflow.cli = src/cli

[options.entry_points]
console_scripts =
    jenkinsflow = jenkinsflow.cli.cli:main

[options.extras_require]
dev =
    nox

[aliases]
test = nox
